cmake_minimum_required(VERSION 3.5)
project( demo )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( demo demo.cpp )
add_executable( send send.cpp )
target_link_libraries( demo ${OpenCV_LIBS} )
target_link_libraries( send ${OpenCV_LIBS} )
set_property( TARGET demo PROPERTY CXX_STANDARD 20 )
set_property( TARGET send PROPERTY CXX_STANDARD 20 )
